--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -15,4 +15,6 @@
     <li><strong>Genres:</strong> {{ num_genres }}</li>
     <li><strong>Books with word "{{ num_books_word.0 }}":</strong> {{ num_books_word.1 }}</li>
   </ul>
+
+  <p>You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.</p>
 {% endblock %}
