--- a/catalog/templates/catalog/base_generic.html
+++ b/catalog/templates/catalog/base_generic.html
@@ -17,6 +17,20 @@
           <li><a href="{% url 'index' %}">Home</a></li>
           <li><a href="{% url 'books' %}">All books</a></li>
           <li><a href="{% url 'authors' %}">All authors</a></li>
+          {% if user.is_authenticated %}
+            &nbsp;
+            <li>User: {{ user }}</li>
+            <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+            <!-- add a URL parameter next containing the address (URL) of the current page -->
+            <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+          {% else %}
+            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+          {% endif %} 
+          {% if perms.catalog.can_mark_returned %}
+              &nbsp;
+              <li>Staff</li>
+              <li><a href="{% url 'borrowed' %}">Borrowed books</a></li>
+              {% endif %}
         </ul>
       {% endblock %}
       </div>
