--- a/catalog/templates/catalog/bookinstance_list_borrowed_user.html
+++ b/catalog/templates/catalog/bookinstance_list_borrowed_user.html
@@ -7,7 +7,8 @@
       {% for bookinst in bookinstance_list %}
       <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
         {% if show_borrower %}
-          <a href="{% url 'book-detail' bookinst.book.pk %}">{{bookinst.book.title}}</a> ({{ bookinst.due_back }}) --{{ bookinst.borrower }}
+          <a href="{% url 'book-detail' bookinst.book.pk %}">{{bookinst.book.title}}</a> ({{ bookinst.due_back }}) --{{ bookinst.borrower }} 
+          <a href="{% url 'renew-book-librarian' bookinst.id %}"> >>Renew</a>
         {% else %}
           <a href="{% url 'book-detail' bookinst.book.pk %}">{{bookinst.book.title}}</a> ({{ bookinst.due_back }})
         {% endif %}
